# cherryusb-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  rust-toolchain.toml
cherryusb-rs/: Cargo.toml  usb_config.h
cherryusb-rs-sys/: Cargo.toml  build.rs  generate_cfg.rs  precompile_bindings.rs  usb_config.h
cherryusb-rs-sys/src/: lib.rs
cherryusb-rs-sys/src/bindings/: bindings.rs
cherryusb-rs-sys/src/bindings/riscv32imc-unknown-none-elf/: bindings.rs
cherryusb-rs-sys/src/bindings/thumbv8m.base-none-eabi/: bindings.rs
cherryusb-rs-sys/src/bindings/thumbv8m.main-none-eabihf/: bindings.rs
cherryusb-rs/src/: lib.rs
examples/stm32h7/: Cargo.toml  build.rs  usb_config.h
examples/stm32h7/src/: main.rs
