[package]
name = "stm32h7"
version = "0.1.0"
authors = ["Haobo Gu <haobogu@outlook.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
cherryusb-rs = { path = "../../cherryusb-rs", features = ["generate-bindings"] }
cortex-m = { version = "0.7.7", features = ['critical-section-single-core'] }
cortex-m-rt = "0.7.3"
embassy-time = { version = "0.3", features = ["tick-hz-32_768", "defmt"] }
embassy-stm32 = { version = "0.1", features = [
    "stm32h7b0vb",
    "defmt",
    "memory-x",
    "time-driver-any",
] }
embassy-executor = { version = "0.5", features = [
    "defmt",
    "arch-cortex-m",
    "task-arena-size-8192",
    "executor-thread",
    "integrated-timers",
] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"

[workspace]
